--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -51,6 +51,9 @@ jobs:
         with:
           go-version: '1.20.1'
 
+      - name: Setup Gradle
+        uses: gradle/gradle-build-action@v3
+
       - name: Install project modules
         run: npm ci
 
