--- a/test/it/test_manifests/gradle/build.gradle
+++ b/test/it/test_manifests/gradle/build.gradle
@@ -21,7 +21,8 @@ dependencies {
     implementation "jakarta.validation:jakarta.validation-api:2.0.2"
     implementation "io.quarkus:quarkus-resteasy-multipart:2.13.7.Final"
     implementation "io.quarkus:quarkus-hibernate-orm-deployment:2.0.2.Final"
-    implementation "log4j:log4j:1.2.17" // exhortignore
+    implementation "log4j:log4j:1.2.17"
+	implementation group: 'log4j', name: 'log4j'
 }
 test {
     useJUnitPlatform()
