fix: get newer cyclonedx version without vuln ci: fix workflow print typo
Signed-off-by: Zvi Grinberg <zgrinber@redhat.com>

--- a/.github/workflows/stage.yml
+++ b/.github/workflows/stage.yml
@@ -103,9 +103,9 @@ jobs:
         run: |
           if [[ $RETEST_IS_NECESSARY == "true" ]]; then
              echo "Re-test was triggered!!, triggering changed file - $TRIGGERING_FILE"
-             echo "Running Again Unit-test =>"
+             echo "Running Again Unit-tests =>"
              npm run test
-             echo "Running Again Unit-test =>"
+             echo "Running Again Integration tests =>"
              npm run integration-tests
           else
             echo "Re-test of library is not needed, continuing to deployment!"
