fix: add node-fetch to dependencies
Signed-off-by: Zvi Grinberg <zgrinber@redhat.com>

--- a/package.json
+++ b/package.json
@@ -54,7 +54,8 @@
 		"fast-xml-parser": "^4.2.4",
 		"help": "^3.0.2",
 		"packageurl-js": "^1.0.2",
-		"yargs": "^17.7.2"
+		"yargs": "^17.7.2",
+		"node-fetch": "^2.6.7"
 	},
 	"devDependencies": {
 		"@babel/core": "^7.23.2",
